--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>排序二叉树</title>
   <style>
-    h1 { text-align: center }
+    body {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: column;
+    }
   </style>
 </head>
 <body>
   <h1>Binary sort tree</h1>
+  <h6>排序二叉树</h6>
 </body>
 </html>
