--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>排序二叉树</title>
+  <script src="binary-sort-tree.js" defer></script>
   <style>
     body {
       display: flex;
